--- a/careers.html
+++ b/careers.html
@@ -19,7 +19,8 @@
                     colors: {
                         'c-dark': '#111111',
                         'c-gray': '#F4F4F4',
-                        'c-accent': '#0033FF',
+                        'c-accent': '#59529c',
+                        'c-lkrete': '#59529c',
                     }
                 }
             }
@@ -96,6 +97,8 @@
         </div>
     </section>
 
+    <div class="construction-tape-separator"></div>
+
     <!-- Why Work With Us -->
     <section class="py-24 bg-white">
         <div class="container mx-auto px-6">
@@ -149,7 +152,7 @@
             </div>
 
             <div class="space-y-6">
-                <div class="bg-white p-8 shadow-sm hover:shadow-xl transition-shadow">
+                <div class="bg-white p-8 shadow-sm hover:shadow-xl transition-all duration-300 group border-t-4 border-transparent hover:border-c-accent">
                     <div class="flex flex-col md:flex-row md:items-center md:justify-between">
                         <div class="mb-4 md:mb-0">
                             <h3 class="text-xl font-bold text-c-dark mb-2">Senior Project Manager</h3>
@@ -166,7 +169,7 @@
                     </div>
                 </div>
 
-                <div class="bg-white p-8 shadow-sm hover:shadow-xl transition-shadow">
+                <div class="bg-white p-8 shadow-sm hover:shadow-xl transition-all duration-300 group border-t-4 border-transparent hover:border-c-accent">
                     <div class="flex flex-col md:flex-row md:items-center md:justify-between">
                         <div class="mb-4 md:mb-0">
                             <h3 class="text-xl font-bold text-c-dark mb-2">Quality Control Engineer</h3>
@@ -183,7 +186,7 @@
                     </div>
                 </div>
 
-                <div class="bg-white p-8 shadow-sm hover:shadow-xl transition-shadow">
+                <div class="bg-white p-8 shadow-sm hover:shadow-xl transition-all duration-300 group border-t-4 border-transparent hover:border-c-accent">
                     <div class="flex flex-col md:flex-row md:items-center md:justify-between">
                         <div class="mb-4 md:mb-0">
                             <h3 class="text-xl font-bold text-c-dark mb-2">Structural Design Engineer</h3>
@@ -200,7 +203,7 @@
                     </div>
                 </div>
 
-                <div class="bg-white p-8 shadow-sm hover:shadow-xl transition-shadow">
+                <div class="bg-white p-8 shadow-sm hover:shadow-xl transition-all duration-300 group border-t-4 border-transparent hover:border-c-accent">
                     <div class="flex flex-col md:flex-row md:items-center md:justify-between">
                         <div class="mb-4 md:mb-0">
                             <h3 class="text-xl font-bold text-c-dark mb-2">Safety Officer</h3>
@@ -217,7 +220,7 @@
                     </div>
                 </div>
 
-                <div class="bg-white p-8 shadow-sm hover:shadow-xl transition-shadow">
+                <div class="bg-white p-8 shadow-sm hover:shadow-xl transition-all duration-300 group border-t-4 border-transparent hover:border-c-accent">
                     <div class="flex flex-col md:flex-row md:items-center md:justify-between">
                         <div class="mb-4 md:mb-0">
                             <h3 class="text-xl font-bold text-c-dark mb-2">Lkrete Technology Specialist</h3>
@@ -343,7 +346,7 @@
                 nav.classList.remove('py-4');
             } else {
                 nav.classList.remove('nav-scrolled');
-                nav.classList.add('py-4);
+                nav.classList.add('py-4');
             }
         });
 
