--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,8 @@
                     colors: {
                         'c-dark': '#111111',
                         'c-gray': '#F4F4F4',
-                        'c-accent': '#0033FF', // Logo Blue
-                        'c-lkrete': '#0033FF', // Keeping consistent, or could be a distinct shade if needed
+                        'c-accent': '#59529c',
+                        'c-lkrete': '#59529c',
                     }
                 }
             }
@@ -37,8 +37,8 @@
             padding-bottom: 1rem;
         }
         .form-input:focus {
-            border-color: #0033FF;
-            box-shadow: 0 0 0 3px rgba(0, 51, 255, 0.1);
+            border-color: #59529c;
+            box-shadow: 0 0 0 3px rgba(89, 82, 156, 0.1);
         }
     </style>
 </head>
