--- a/services.html
+++ b/services.html
@@ -19,8 +19,8 @@
                     colors: {
                         'c-dark': '#111111',
                         'c-gray': '#F4F4F4',
-                        'c-accent': '#0033FF', // Logo Blue
-                        'c-lkrete': '#0033FF', // Keeping consistent, or could be a distinct shade if needed
+                        'c-accent': '#59529c',
+                        'c-lkrete': '#59529c',
                     }
                 }
             }
@@ -126,6 +126,8 @@
         </div>
     </section>
 
+    <div class="construction-tape-separator"></div>
+
     <!-- Road Works Section -->
     <section id="road-works" class="py-24 bg-white">
         <div class="container mx-auto px-6">
@@ -176,6 +178,8 @@
         </div>
     </section>
 
+    <div class="construction-tape-separator"></div>
+
     <!-- Industrial Sector Section -->
     <section class="py-24 bg-c-gray">
         <div class="container mx-auto px-6">
@@ -190,22 +194,22 @@
                     </p>
                     
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-8">
-                        <div class="bg-white p-6 shadow-sm">
+                        <div class="bg-white p-8 shadow-sm hover:shadow-xl transition-all duration-300 group border-t-4 border-transparent hover:border-c-accent">
                             <i data-lucide="cpu" class="w-8 h-8 text-c-accent mb-4"></i>
                             <h4 class="font-bold text-c-dark mb-2">Manufacturing Plants</h4>
                             <p class="text-gray-600 text-sm">Complete industrial facility construction with advanced automation infrastructure.</p>
                         </div>
-                        <div class="bg-white p-6 shadow-sm">
+                        <div class="bg-white p-8 shadow-sm hover:shadow-xl transition-all duration-300 group border-t-4 border-transparent hover:border-c-accent">
                             <i data-lucide="zap" class="w-8 h-8 text-c-accent mb-4"></i>
                             <h4 class="font-bold text-c-dark mb-2">Power Systems</h4>
                             <p class="text-gray-600 text-sm">Power plant infrastructure and renewable energy installations.</p>
                         </div>
-                        <div class="bg-white p-6 shadow-sm">
+                        <div class="bg-white p-8 shadow-sm hover:shadow-xl transition-all duration-300 group border-t-4 border-transparent hover:border-c-accent">
                             <i data-lucide="recycle" class="w-8 h-8 text-c-accent mb-4"></i>
                             <h4 class="font-bold text-c-dark mb-2">Waste Management</h4>
                             <p class="text-gray-600 text-sm">Modern waste processing and recycling facility infrastructure.</p>
                         </div>
-                        <div class="bg-white p-6 shadow-sm">
+                        <div class="bg-white p-8 shadow-sm hover:shadow-xl transition-all duration-300 group border-t-4 border-transparent hover:border-c-accent">
                             <i data-lucide="settings" class="w-8 h-8 text-c-accent mb-4"></i>
                             <h4 class="font-bold text-c-dark mb-2">Utility Infrastructure</h4>
                             <p class="text-gray-600 text-sm">Complete utility systems including water, power, and communication networks.</p>
@@ -274,6 +278,8 @@
         </div>
     </section>
 
+    <div class="construction-tape-separator"></div>
+
     <!-- Energy & Petroleum Section -->
     <section class="py-24 bg-c-gray">
         <div class="container mx-auto px-6">
@@ -288,21 +294,21 @@
                     </p>
                     
                     <div class="space-y-6">
-                        <div class="bg-white p-6 shadow-sm">
+                        <div class="bg-white p-8 shadow-sm hover:shadow-xl transition-all duration-300 group border-t-4 border-transparent hover:border-c-accent">
                             <h4 class="font-bold text-c-dark mb-2 flex items-center">
                                 <i data-lucide="fuel" class="w-5 h-5 text-c-accent mr-2"></i>
                                 Refinery Infrastructure
                             </h4>
                             <p class="text-gray-600 text-sm">Complete refinery construction including processing units, storage tanks, and safety systems.</p>
                         </div>
-                        <div class="bg-white p-6 shadow-sm">
+                        <div class="bg-white p-8 shadow-sm hover:shadow-xl transition-all duration-300 group border-t-4 border-transparent hover:border-c-accent">
                             <h4 class="font-bold text-c-dark mb-2 flex items-center">
                                 <i data-lucide="sun" class="w-5 h-5 text-c-accent mr-2"></i>
                                 Power Plant Facilities
                             </h4>
                             <p class="text-gray-600 text-sm">Conventional and renewable power plant infrastructure with advanced control systems.</p>
                         </div>
-                        <div class="bg-white p-6 shadow-sm">
+                        <div class="bg-white p-8 shadow-sm hover:shadow-xl transition-all duration-300 group border-t-4 border-transparent hover:border-c-accent">
                             <h4 class="font-bold text-c-dark mb-2 flex items-center">
                                 <i data-lucide="activity" class="w-5 h-5 text-c-accent mr-2"></i>
                                 Energy Distribution
@@ -323,6 +329,8 @@
             </div>
         </div>
     </section>
+
+    <div class="construction-tape-separator"></div>
 
     <!-- Quality Assurance Section -->
     <section class="py-24 bg-c-dark text-white">
@@ -362,6 +370,8 @@
             </div>
         </div>
     </section>
+
+    <div class="construction-tape-separator"></div>
 
     <!-- Call to Action Section -->
     <section class="py-16 bg-c-accent text-white">
