--- a/about.html
+++ b/about.html
@@ -123,6 +123,8 @@
         </div>
     </section>
 
+    <div class="construction-tape-separator"></div>
+
     <!-- Main About Content -->
     <section class="py-24 bg-white">
         <div class="container mx-auto px-6">
@@ -253,6 +255,8 @@
             </div>
         </div>
     </section>
+
+    <div class="construction-tape-separator"></div>
 
     <!-- Stats Section -->
     <section class="py-16 bg-c-dark text-white">
