--- a/innovation.html
+++ b/innovation.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="https://unpkg.com/lucide@latest"></script>
     <script>
         tailwind.config = {
@@ -19,7 +20,7 @@
                     colors: {
                         'c-dark': '#111111',
                         'c-gray': '#F4F4F4',
-                        'c-accent': '#0033FF',
+                        'c-accent': '#59529c',
                     }
                 }
             }
@@ -95,7 +96,7 @@
             <p class="text-xl text-gray-300 max-w-3xl mx-auto">Fostering innovation through research, publications, training, and collaborative seminars with industry experts.</p>
         </div>
     </section>
-
+        <div class="construction-tape-separator"></div>
     <!-- Knowledge Hub -->
     <section class="py-24 bg-white">
         <div class="container mx-auto px-6">
@@ -134,7 +135,7 @@
             </div>
         </div>
     </section>
-
+        <div class="construction-tape-separator"></div>
     <!-- Recent Publications -->
     <section class="py-24 bg-c-gray">
         <div class="container mx-auto px-6">
@@ -179,7 +180,7 @@
             </div>
         </div>
     </section>
-
+        <div class="construction-tape-separator"></div>
     <!-- Training Programs -->
     <section class="py-24 bg-white">
         <div class="container mx-auto px-6">
@@ -215,7 +216,7 @@
             </div>
         </div>
     </section>
-
+        <div class="construction-tape-separator"></div>
     <!-- Collaboration CTA -->
     <section class="py-24 bg-c-dark text-white">
         <div class="container mx-auto px-6 text-center">
@@ -231,7 +232,7 @@
             </div>
         </div>
     </section>
-
+        <div class="construction-tape-separator"></div>
     <!-- Footer -->
     <footer class="bg-black text-white py-12 border-t border-white/10">
         <div class="container mx-auto px-6 flex flex-col md:flex-row justify-between items-center">
