--- a/team.html
+++ b/team.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="https://unpkg.com/lucide@latest"></script>
     <script>
         tailwind.config = {
@@ -19,7 +20,7 @@
                     colors: {
                         'c-dark': '#111111',
                         'c-gray': '#F4F4F4',
-                        'c-accent': '#0033FF',
+                        'c-accent': '#59529c',
                     }
                 }
             }
@@ -95,7 +96,7 @@
             <p class="text-xl text-gray-300 max-w-3xl mx-auto">Led by a dedicated group of experts committed to safety and excellence in every project we undertake.</p>
         </div>
     </section>
-
+        <div class="construction-tape-separator"></div>
     <!-- Team Structure -->
     <section class="py-24 bg-white">
         <div class="container mx-auto px-6">
@@ -152,7 +153,7 @@
             </div>
         </div>
     </section>
-
+        <div class="construction-tape-separator"></div>
     <!-- Safety & Leadership -->
     <section class="py-24 bg-c-gray">
         <div class="container mx-auto px-6">
@@ -193,7 +194,7 @@
             </div>
         </div>
     </section>
-
+        <div class="construction-tape-separator"></div>
     <!-- Team Stats -->
     <section class="py-24 bg-white">
         <div class="container mx-auto px-6">
@@ -229,7 +230,7 @@
             </div>
         </div>
     </section>
-
+        <div class="construction-tape-separator"></div>
     <!-- Join Team CTA -->
     <section class="py-24 bg-c-dark text-white">
         <div class="container mx-auto px-6 text-center">
@@ -245,7 +246,7 @@
             </div>
         </div>
     </section>
-
+        <div class="construction-tape-separator"></div>
     <!-- Footer -->
     <footer class="bg-black text-white py-12 border-t border-white/10">
         <div class="container mx-auto px-6 flex flex-col md:flex-row justify-between items-center">
