--- a/careers.html
+++ b/careers.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="https://unpkg.com/lucide@latest"></script>
     <script>
         tailwind.config = {
@@ -142,7 +143,7 @@
             </div>
         </div>
     </section>
-
+        <div class="construction-tape-separator"></div>
     <!-- Open Positions -->
     <section class="py-24 bg-c-gray">
         <div class="container mx-auto px-6">
@@ -239,7 +240,7 @@
             </div>
         </div>
     </section>
-
+        <div class="construction-tape-separator"></div>
     <!-- Application Process -->
     <section class="py-24 bg-white">
         <div class="container mx-auto px-6">
@@ -295,7 +296,7 @@
             </div>
         </div>
     </section>
-
+        <div class="construction-tape-separator"></div>
     <!-- Apply CTA -->
     <section class="py-24 bg-c-dark text-white">
         <div class="container mx-auto px-6 text-center">
@@ -311,7 +312,7 @@
             </div>
         </div>
     </section>
-
+        <div class="construction-tape-separator"></div>
     <!-- Footer -->
     <footer class="bg-black text-white py-12 border-t border-white/10">
         <div class="container mx-auto px-6 flex flex-col md:flex-row justify-between items-center">
