Replace static map information with an embedded Google Maps iframe in the contact section

--- a/contact.html
+++ b/contact.html
@@ -376,14 +376,7 @@
                 <h2 class="text-4xl font-bold text-c-dark">Visit Our Headquarters</h2>
             </div>
             <div class="bg-white h-96 rounded-lg shadow-lg flex items-center justify-center border border-gray-200">
-                <div class="text-center">
-                    <i data-lucide="map-pin" class="w-16 h-16 text-c-accent mx-auto mb-4"></i>
-                    <h3 class="text-xl font-bold text-c-dark mb-2">Interactive Map</h3>
-                    <p class="text-gray-600">Industrial Area, Hubli, Karnataka, India</p>
-                    <a href="https://maps.google.com" target="_blank" class="inline-flex items-center mt-4 text-c-accent font-bold hover:underline">
-                        View on Google Maps <i data-lucide="external-link" class="w-4 h-4 ml-1"></i>
-                    </a>
-                </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.7357839160586!2d77.54808467537045!3d12.924695887386397!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae3e2df70807cf%3A0x221c8e2e994cf127!2sLaxman%20Kamath%20%26%20Co.!5e0!3m2!1sen!2sin!4v1764768799228!5m2!1sen!2sin" width="1455" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </section>
