--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
         </div>
         
         <!-- Mobile Menu -->
-        <div id="mobile-menu" class="hidden absolute top-full left-0 w-full bg-c-dark p-6 flex-col space-y-4 border-t border-gray-800 xl:hidden max-h-[80vh] overflow-y-auto">
+        <div id="mobile-menu" class="hidden absolute top-full left-0 w-full bg-c-dark text-white p-6 flex-col space-y-4 border-t border-white/10 xl:hidden max-h-[80vh] overflow-y-auto">
             <a href="index.html" class="block hover:text-c-accent font-bold">Home</a>
             <a href="about.html" class="block text-c-accent font-bold">About Us</a>
             <a href="values.html" class="block hover:text-c-accent font-bold">Values</a>
@@ -99,24 +99,24 @@
             <div class="absolute inset-0 hero-overlay"></div>
         </div>
 
-        <div class="container mx-auto px-6 relative z-10 pt-20">
+        <div class="container mx-auto px-6 relative z-10 pt-16 md:pt-20">
             <div class="max-w-3xl">
-                <div class="flex items-center space-x-4 mb-6 animate-fade-in">
+                <div class="flex items-center space-x-4 mb-4 md:mb-6 animate-fade-in">
                     <div class="h-1 w-12 bg-c-accent"></div>
                     <span class="text-c-accent uppercase tracking-widest font-bold text-sm">Est. 1998</span>
                 </div>
-                <h1 class="text-5xl md:text-7xl font-extrabold text-white leading-tight mb-8">
+                <h1 class="text-4xl md:text-5xl lg:text-7xl font-extrabold text-white leading-tight mb-6 md:mb-8">
                     Our Story & <br/>
                     <span class="text-transparent bg-clip-text bg-gradient-to-r from-white to-gray-400">Vision</span>
                 </h1>
-                <p class="text-gray-300 text-lg md:text-xl mb-10 max-w-xl font-light">
+                <p class="text-gray-300 text-base md:text-lg lg:text-xl mb-8 md:mb-10 max-w-xl font-light">
                     Building infrastructure excellence with 25+ years of commitment to quality, innovation, and sustainable construction practices.
                 </p>
-                <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
-                    <a href="services.html" class="bg-c-accent hover:bg-indigo-800 text-white px-8 py-4 font-bold uppercase text-sm tracking-wider transition-colors text-center">
+                <div class="flex flex-col sm:flex-row space-y-3 sm:space-y-0 sm:space-x-4">
+                    <a href="services.html" class="bg-c-accent hover:bg-indigo-800 text-white px-6 md:px-8 py-3 md:py-4 font-bold uppercase text-sm tracking-wider transition-colors text-center">
                         Our Services
                     </a>
-                    <a href="contact.html" class="border border-white text-white hover:bg-white hover:text-c-dark px-8 py-4 font-bold uppercase text-sm tracking-wider transition-colors text-center">
+                    <a href="contact.html" class="border border-white text-white hover:bg-white hover:text-c-dark px-6 md:px-8 py-3 md:py-4 font-bold uppercase text-sm tracking-wider transition-colors text-center">
                         Get In Touch
                     </a>
                 </div>
@@ -127,7 +127,7 @@
     <div class="construction-tape-separator"></div>
 
     <!-- Main About Content -->
-    <section class="py-24 bg-white">
+    <section class="py-12 md:py-24 bg-white">
         <div class="container mx-auto px-6">
             <div class="flex flex-col lg:flex-row items-start gap-16">
                 <div class="w-full lg:w-2/3">
