--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         </div>
         
         <!-- Mobile Menu -->
-        <div id="mobile-menu" class="hidden absolute top-full left-0 w-full bg-white p-6 flex-col space-y-4 border-t border-gray-300 xl:hidden max-h-[80vh] overflow-y-auto">
+        <div id="mobile-menu" class="hidden absolute top-full left-0 w-full bg-c-dark text-white p-6 flex-col space-y-4 border-t border-white/10 xl:hidden max-h-[80vh] overflow-y-auto">
             <a href="index.html" class="block hover:text-c-accent font-bold">Home</a>
             <a href="about.html" class="block hover:text-c-accent font-bold">About Us</a>
             <a href="values.html" class="block hover:text-c-accent font-bold">Values</a>
@@ -322,26 +322,26 @@
             </button>
         </div>
 
-        <div class="container mx-auto px-6 relative z-10 pt-20">
+        <div class="container mx-auto px-6 relative z-10 pt-16 md:pt-20">
             <div class="max-w-3xl">
-                <div class="flex items-center space-x-4 mb-6 animate-fade-in">
+                <div class="flex items-center space-x-4 mb-4 md:mb-6 animate-fade-in">
                     <div class="h-1 w-12 bg-c-accent"></div>
                     <span class="text-c-accent uppercase tracking-widest font-bold text-sm">Est. 1998</span>
                 </div>
-                <h1 class="text-5xl md:text-7xl font-extrabold text-white leading-tight mb-8 text-left">
+                <h1 class="text-4xl md:text-5xl lg:text-7xl font-extrabold text-white leading-tight mb-6 md:mb-8 text-left">
                     Laxman Kamath <br/>
                     <span class="text-white">& Co.</span>
                 </h1>
-                <p class="text-white text-lg md:text-xl mb-10 max-w-xl font-light text-left">
+                <p class="text-white text-base md:text-lg lg:text-xl mb-8 md:mb-10 max-w-xl font-light text-left">
                     A Construction Company Built on Innovation.<br>
                     From complex infrastructure to precision engineering, <br>
                     we are the general contractor you trust to build the future.
                 </p>
-                <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
-                    <a href="services.html" class="bg-c-accent hover:bg-blue-700 text-white px-8 py-4 font-bold uppercase text-sm tracking-wider transition-colors text-center">
+                <div class="flex flex-col sm:flex-row space-y-3 sm:space-y-0 sm:space-x-4">
+                    <a href="services.html" class="bg-c-accent hover:bg-blue-700 text-white px-6 md:px-8 py-3 md:py-4 font-bold uppercase text-sm tracking-wider transition-colors text-center">
                         Our Services
                     </a>
-                    <a href="lkrete.html" class="border border-white text-white hover:bg-white hover:text-c-dark px-8 py-4 font-bold uppercase text-sm tracking-wider transition-colors text-center">
+                    <a href="lkrete.html" class="border border-white text-white hover:bg-white hover:text-c-dark px-6 md:px-8 py-3 md:py-4 font-bold uppercase text-sm tracking-wider transition-colors text-center">
                         Discover Lkrete
                     </a>
                 </div>
@@ -359,7 +359,7 @@
     <div class="construction-tape-separator"></div>
 
     <!-- Construction Video Section -->
-    <section id="video-section" class="py-24 bg-white">
+    <section id="video-section" class="py-12 md:py-24 bg-white">
         <div class="container mx-auto px-6">
             <div class="text-center mb-12">
                 <h4 class="text-c-accent font-bold uppercase tracking-widest text-lg">More Than Just Builders</h4>
