--- a/services.html
+++ b/services.html
@@ -80,7 +80,7 @@
         </div>
         
         <!-- Mobile Menu -->
-        <div id="mobile-menu" class="hidden absolute top-full left-0 w-full bg-c-dark p-6 flex-col space-y-4 border-t border-gray-800 xl:hidden max-h-[80vh] overflow-y-auto">
+        <div id="mobile-menu" class="hidden absolute top-full left-0 w-full bg-c-dark text-white p-6 flex-col space-y-4 border-t border-white/10 xl:hidden max-h-[80vh] overflow-y-auto">
             <a href="index.html" class="block hover:text-c-accent font-bold">Home</a>
             <a href="about.html" class="block hover:text-c-accent font-bold">About Us</a>
             <a href="values.html" class="block hover:text-c-accent font-bold">Values</a>
