--- a/about.html
+++ b/about.html
@@ -106,11 +106,11 @@
                     <span class="text-c-accent uppercase tracking-widest font-bold text-sm">Est. 1998</span>
                 </div>
                 <h1 class="text-4xl md:text-5xl lg:text-7xl font-extrabold text-white leading-tight mb-6 md:mb-8">
-                    Our Story & <br/>
-                    <span class="text-transparent bg-clip-text bg-gradient-to-r from-white to-gray-400">Vision</span>
+                    Buiding the Future<br/>
+                    <span class="text-transparent bg-clip-text bg-gradient-to-r from-white to-gray-400">Since 1998</span>
                 </h1>
                 <p class="text-gray-300 text-base md:text-lg lg:text-xl mb-8 md:mb-10 max-w-xl font-light">
-                    Building infrastructure excellence with 25+ years of commitment to quality, innovation, and sustainable construction practices.
+                    Delivering sustainable infrastructure and unparalleled quality across South India for over 25 years. Your project. Our commitment.
                 </p>
                 <div class="flex flex-col sm:flex-row space-y-3 sm:space-y-0 sm:space-x-4">
                     <a href="services.html" class="bg-c-accent hover:bg-indigo-800 text-white px-6 md:px-8 py-3 md:py-4 font-bold uppercase text-sm tracking-wider transition-colors text-center">
@@ -131,30 +131,33 @@
         <div class="container mx-auto px-6">
             <div class="flex flex-col lg:flex-row items-start gap-16">
                 <div class="w-full lg:w-2/3">
-                    <h4 class="text-c-accent font-bold uppercase tracking-widest mb-4 text-sm">About Laxman Kamath & Co</h4>
-                    <h2 class="text-4xl font-bold text-c-dark mb-8">Building Tomorrow's Infrastructure Today</h2>
+                    <h4 class="text-c-accent font-bold uppercase tracking-widest mb-4 text-sm">The Journey</h4>
                     
                     <div class="space-y-8">
                         <div>
-                            <h3 class="text-xl font-bold text-c-dark mb-4">Our Journey</h3>
+                            
                             <p class="text-gray-600 leading-relaxed mb-6">
-                                Founded in 1998, Laxman Kamath & Co has emerged as a leading infrastructure and construction company with a relentless focus on excellence, integrity, and innovation. What began as a small construction firm has evolved into a comprehensive solutions provider across multiple sectors including road works, industrial infrastructure, commercial buildings, and specialized construction technologies.
+                                It all started in 1998. Laxman Kamath & Co. was founded on a simple promise: to deliver infrastructure that lasts. We began as a small firm specializing in niche industrial and commercial builds.
                             </p>
                             <p class="text-gray-600 leading-relaxed">
-                                Our journey has been marked by consistent growth, technological advancement, and an unwavering commitment to delivering projects that stand the test of time. We take pride in our ability to tackle complex challenges and deliver solutions that exceed expectations while maintaining the highest standards of quality and safety.
+                                Through relentless dedication to quality, we steadily grew, expanding our footprint across South India. Our success is measured not just in size, but in the enduring partnerships we've forged and the resilient communities we've helped connect.
                             </p>
                         </div>
 
                         <div>
                             <h3 class="text-xl font-bold text-c-dark mb-4">Vision & Mission</h3>
                             <div class="bg-c-gray p-8 border-l-4 border-c-accent">
-                                <h4 class="font-bold text-c-dark mb-3">Vision</h4>
+                                <h4 class="font-bold text-c-dark mb-3">The Future We See</h4>
                                 <p class="text-gray-600 mb-6">
-                                    To be the premier infrastructure company delivering sustainable and innovative solutions that empower communities and industries across India and beyond.
+                                    To be the premier partner in India's growth story.<br>
+                                    To pioneer sustainable, resilient infrastructure solutions.<br>
+                                    To set a new global standard for quality.
                                 </p>
                                 <h4 class="font-bold text-c-dark mb-3">Mission</h4>
                                 <p class="text-gray-600">
-                                    To build lasting infrastructure through excellence in execution, innovative construction methods, and sustainable practices while fostering long-term relationships with our clients, partners, and communities.
+                                    Consistently deliver excellence through execution.<br>
+                                    Adopt only innovative and sustainable construction practices.<br>
+                                    FFoster deep, lasting relationships with every client we serve.
                                 </p>
                             </div>
                         </div>
@@ -167,8 +170,8 @@
                                         <i data-lucide="award" class="w-6 h-6 text-c-accent"></i>
                                     </div>
                                     <div>
-                                        <h5 class="font-bold text-c-dark mb-2">25+ Years Experience</h5>
-                                        <p class="text-gray-600 text-sm">Quarter-century of proven excellence in infrastructure development</p>
+                                        <h5 class="font-bold text-c-dark mb-2">The Wisdom of Experience</h5>
+                                        <p class="text-gray-600 text-sm">25+ Years of Focused Excellence: Leveraging a quarter-century of proven reliability to ensure a rock-solid foundation for your project.</p>
                                     </div>
                                 </div>
                                 <div class="flex items-start space-x-4">
@@ -176,8 +179,8 @@
                                         <i data-lucide="shield-check" class="w-6 h-6 text-c-accent"></i>
                                     </div>
                                     <div>
-                                        <h5 class="font-bold text-c-dark mb-2">Quality Assurance</h5>
-                                        <p class="text-gray-600 text-sm">ISO certified processes ensuring every project meets highest standards</p>
+                                        <h5 class="font-bold text-c-dark mb-2">Building for Tommorow</h5>
+                                        <p class="text-gray-600 text-sm">Sustainability Built-In: Commitment to eco-friendly construction and materials protects your investment and minimizes environmental impact.</p>
                                     </div>
                                 </div>
                                 <div class="flex items-start space-x-4">
@@ -185,8 +188,8 @@
                                         <i data-lucide="leaf" class="w-6 h-6 text-c-accent"></i>
                                     </div>
                                     <div>
-                                        <h5 class="font-bold text-c-dark mb-2">Sustainability Focus</h5>
-                                        <p class="text-gray-600 text-sm">Eco-friendly construction methods and sustainable materials</p>
+                                        <h5 class="font-bold text-c-dark mb-2">Our Uncompromising Standard</h5>
+                                        <p class="text-gray-600 text-sm">ISO Certified Quality: Adhering to the most stringent global standards, ensuring every project milestone is met with flawless execution.</p>
                                     </div>
                                 </div>
                                 <div class="flex items-start space-x-4">
@@ -194,8 +197,8 @@
                                         <i data-lucide="users" class="w-6 h-6 text-c-accent"></i>
                                     </div>
                                     <div>
-                                        <h5 class="font-bold text-c-dark mb-2">Expert Team</h5>
-                                        <p class="text-gray-600 text-sm">Skilled professionals and technical experts driving innovation</p>
+                                        <h5 class="font-bold text-c-dark mb-2">The Architects of Change</h5>
+                                        <p class="text-gray-600 text-sm">Expert, Innovative Team: A collaborative force of skilled professionals and visionary leaders driving continuous innovation in every aspect of the build.</p>
                                     </div>
                                 </div>
                             </div>
@@ -211,43 +214,43 @@
                             <div class="flex items-start space-x-4">
                                 <div class="flex-shrink-0 w-12 h-12 bg-c-accent text-white rounded-full flex items-center justify-center font-bold text-sm">1998</div>
                                 <div>
-                                    <h5 class="font-bold text-c-dark mb-1">Company Founded</h5>
-                                    <p class="text-gray-600 text-sm">Established with a vision to transform infrastructure development in Karnataka</p>
+                                    <h5 class="font-bold text-c-dark mb-1">The First Blueprint</h5>
+                                    <p class="text-gray-600 text-sm">Company founded in Karnataka</p>
                                 </div>
                             </div>
                             <div class="flex items-start space-x-4">
                                 <div class="flex-shrink-0 w-12 h-12 bg-c-accent text-white rounded-full flex items-center justify-center font-bold text-sm">2005</div>
                                 <div>
-                                    <h5 class="font-bold text-c-dark mb-1">Regional Expansion</h5>
-                                    <p class="text-gray-600 text-sm">Extended operations across South India with major highway projects</p>
+                                    <h5 class="font-bold text-c-dark mb-1">Expanded Our Reach</h5>
+                                    <p class="text-gray-600 text-sm">Operations extended across South India.</p>
                                 </div>
                             </div>
                             <div class="flex items-start space-x-4">
                                 <div class="flex-shrink-0 w-12 h-12 bg-c-accent text-white rounded-full flex items-center justify-center font-bold text-sm">2010</div>
                                 <div>
-                                    <h5 class="font-bold text-c-dark mb-1">Industrial Sector Entry</h5>
-                                    <p class="text-gray-600 text-sm">Expanded into industrial infrastructure and manufacturing facilities</p>
+                                    <h5 class="font-bold text-c-dark mb-1">Focus on Industry</h5>
+                                    <p class="text-gray-600 text-sm">Diversified into key industrial and manufacturing facilities.</p>
                                 </div>
                             </div>
                             <div class="flex items-start space-x-4">
                                 <div class="flex-shrink-0 w-12 h-12 bg-c-accent text-white rounded-full flex items-center justify-center font-bold text-sm">2015</div>
                                 <div>
                                     <h5 class="font-bold text-c-dark mb-1">ISO Certification</h5>
-                                    <p class="text-gray-600 text-sm">Achieved ISO 9001:2015 certification for quality management systems</p>
+                                    <p class="text-gray-600 text-sm">Achieved ISO 9001/14001 certifications</p>
                                 </div>
                             </div>
                             <div class="flex items-start space-x-4">
                                 <div class="flex-shrink-0 w-12 h-12 bg-c-accent text-white rounded-full flex items-center justify-center font-bold text-sm">2020</div>
                                 <div>
-                                    <h5 class="font-bold text-c-dark mb-1">Digital Transformation</h5>
-                                    <p class="text-gray-600 text-sm">Implemented advanced project management and quality control systems</p>
+                                    <h5 class="font-bold text-c-dark mb-1">Pioneering Technology</h5>
+                                    <p class="text-gray-600 text-sm">Implemented advanced digital project management systems.</p>
                                 </div>
                             </div>
                             <div class="flex items-start space-x-4">
                                 <div class="flex-shrink-0 w-12 h-12 bg-c-accent text-white rounded-full flex items-center justify-center font-bold text-sm">2023</div>
                                 <div>
-                                    <h5 class="font-bold text-c-dark mb-1">Lkrete Launch</h5>
-                                    <p class="text-gray-600 text-sm">Introduced revolutionary Lkrete technology for rapid construction</p>
+                                    <h5 class="font-bold text-c-dark mb-1">Lkrete Innovation</h5>
+                                    <p class="text-gray-600 text-sm">Introduced proprietary Lkrete technology for rapid construction.</p>
                                 </div>
                             </div>
                         </div>
