feat: update fdir to version 6.5.0 with new types and improved functionality
- Added TypeScript definitions for fdir in index.d.mts and index.d.cts.
- Introduced new API methods for better directory crawling and globbing.
- Enhanced performance for file and directory handling.
- Updated package.json to reflect new version and dependencies.
- Added nanoid library for generating unique IDs with custom alphabets.

--- a/industrial_application.html
+++ b/industrial_application.html
@@ -100,10 +100,10 @@
             <div class="text-center mb-16">
                 <div class="flex items-center justify-center space-x-4 mb-6">
                     <div class="h-1 w-12 bg-c-accent"></div>
-                    <span class="text-c-accent uppercase tracking-widest font-bold text-sm">Project Showcase</span>
+                    <span class="text-white uppercase tracking-widest font-bold text-sm">Project Showcase</span>
                 </div>
                 <h2 class="text-4xl font-bold text-c-theme-text mb-6">Industrial Applications</h2>
-                <p class="text-gray-600 text-lg max-w-3xl mx-auto">
+                <p class="text-white text-lg max-w-3xl mx-auto">
                     Discover how Lkrete's precast concrete solutions are revolutionizing industrial construction with enhanced durability, rapid installation, and sustainable practices. From manufacturing plants to heavy industry facilities, explore our successful projects that showcase the strength and versatility of Lkrete technology.
                 </p>
             </div>
@@ -121,14 +121,12 @@
                                 </video>
                             </div>
                             <div class="absolute inset-0 bg-gradient-to-t from-black/20 to-transparent pointer-events-none"></div>
-                            <div class="absolute bottom-4 left-4 text-white">
-                                <h3 class="text-xl font-bold">Technology Showcase</h3>
-                            </div>
+                            
                         </div>
                         <img src="public/Images/precast_elemts.png" alt="Precast Elements" class="w-full max-w-4xl h-80 object-cover object-center rounded-lg shadow-lg mt-12 mx-auto">
                         <div class="text-center mt-8">
-                            <p class="text-gray-600 mb-4">Explore how Lkrete technology transforms construction challenges into remarkable achievements.</p>
-                            <a href="contact.html" class="bg-c-accent hover:bg-green-700 text-white px-8 py-4 font-bold uppercase text-sm tracking-wider transition-colors inline-block rounded-sm">
+                            <p class="text-white mb-4">Explore how Lkrete technology transforms construction challenges into remarkable achievements.</p>
+                            <a target="_blank" href="C:\Users\hp\Desktop\Lk_Co\Post_meet\LK_Co_new_1d6g\public\doc\lk&co booklet.pdf" class="bg-c-accent hover:bg-green-700 text-white px-8 py-4 font-bold uppercase text-sm tracking-wider transition-colors inline-block rounded-sm">
                                 Discuss Your Project
                             </a>
                         </div>
