--- a/team.html
+++ b/team.html
@@ -43,7 +43,7 @@
         <div class="container mx-auto px-6 flex justify-between items-center">
             <!-- Left: Logo -->
             <div class="flex items-center space-x-2 shrink-0">
-                <img src="public/Images/white logo.jpg" alt="Laxman Kamath & Co Logo" class="h-12">
+                <img src="public/Images/Main Logo LK CO.png" alt="Laxman Kamath & Co Logo" class="h-16">
                 <a href="index.html" class="hidden lg:block text-xl font-bold tracking-tight leading-tight">Laxman Kamath<br>& Co</a>
                 <a href="index.html" class="lg:hidden text-xl font-bold tracking-tight">LK & Co</a>
             </div>
@@ -252,7 +252,7 @@
     <footer class="bg-black text-white py-12 border-t border-white/10">
         <div class="container mx-auto px-6 flex flex-col md:flex-row justify-between items-center">
             <div class="flex items-center space-x-2 mb-4 md:mb-0">
-                <img src="public/Images/white logo.jpg" alt="Company Logo" class="h-10">
+                <img src="public/Images/Main Logo LK CO.png" alt="Company Logo" class="h-12">
                 <div class="flex flex-col">
                      <span class="text-lg font-bold tracking-tight leading-none">Laxman Kamath</span>
                      <span class="text-sm font-bold tracking-tight text-gray-400">& Co.</span>
